--- a/index.html
+++ b/index.html
@@ -10,32 +10,40 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Sourcetrail</title>
-    <link rel = "icon" href ="https://raw.githubusercontent.com/OpenSourceSourceTrail/resources/main/app/data/gui/icon/sourcetrail.ico" type="image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/OpenSourceSourceTrail/resources/main/app/data/gui/icon/sourcetrail.ico" type="image/x-icon">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-          <img src="https://raw.githubusercontent.com/OpenSourceSourceTrail/resources/main/app/data/gui/icon/sourcetrail.ico" width="30" height="30" class="d-inline-block align-top" alt="">
-          Sourcetrail
+            <img src="https://raw.githubusercontent.com/OpenSourceSourceTrail/resources/main/app/data/gui/icon/sourcetrail.ico" width="30" height="30" class="d-inline-block align-top" alt="">
+            Sourcetrail
         </a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Coverage</a>
+                    <a id="coverage_id" class="nav-link" href="#">Coverage</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Documentation</a>
+                <li class="nav-item active">
+                    <a id="doc_id" class="nav-link" href="#">Documentation</a>
                 </li>
             </ul>
         </div>
     </nav>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12">
+            <iframe id="frame_id" style="width: 100vw;height: 100vh;position: relative;" src="" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="src/main.js"></script>
 </body>
 
 </html>
