--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
+                    <a id="warning_id" class="nav-link" href="#">Warning</a>
+                </li>
+                <li class="nav-item">
                     <a id="coverage_id" class="nav-link" href="#">Coverage</a>
                 </li>
                 <li class="nav-item active">
@@ -32,17 +35,19 @@
         </div>
     </nav>
 
-    <div class="row">
+    <div id="page_id" class="row">
         <div class="col-xs-12 col-sm-12 col-md-12">
             <iframe id="frame_id" style="width: 100vw;height: 100vh;position: relative;" src="" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!--Google charts-->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <!--Main function-->
     <script src="src/main.js"></script>
 </body>
 
